first section tablet

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     </header>
     <!-- MAIN -->
     <main>
-        <section id="get-demo" class="container">
+        <section id="get-demo" class="container flex">
+            <!-- First card -->
             <div class="card-get-demo" id="card1-get-demo">
                 <h2>
                     Get a demo application
@@ -69,6 +70,7 @@
                 </a>
                 <img src="./assets/img/phone.png" alt="Phone preview">
             </div>
+            <!-- Second card -->
             <div class="card-get-demo">
                 <i class="fa-solid fa-file-code"></i>
                 <h2>
