--- a/index.html
+++ b/index.html
@@ -58,17 +58,22 @@
         <section id="get-demo" class="container flex">
             <!-- First card -->
             <div class="card-get-demo" id="card1-get-demo">
-                <h2>
-                    Get a demo application
-                </h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.
-                </p>
-                <a href="#" class="btn-blue">
-                    <i class="fa-brands fa-apple"></i> 
-                    App Store
-                </a>
-                <img src="./assets/img/phone.png" alt="Phone preview">
+                <div class="card1-text">
+                    <h2>
+                        Get a demo application
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.
+                    </p>
+                    <a href="#" class="btn-blue">
+                        <i class="fa-brands fa-apple"></i> 
+                        App Store
+                    </a> 
+                </div>
+                    
+                <div class="card1-img">
+                    <img src="./assets/img/phone.png" alt="Phone preview">
+                </div>
             </div>
             <!-- Second card -->
             <div class="card-get-demo">
