immagine prima card demo-application

--- a/index.html
+++ b/index.html
@@ -194,9 +194,33 @@
                     <span class="testimonial-name">BOB ROBERTS</span>
                 </div>
             </div>
-
-
         </section>
+        <!-- SECTION BENEFITS -->
+        <div class="bg-purple">
+            <section id="benefits" class="container">
+                <h2>
+                    Benefits of working with us
+                </h2>
+                <div class="benefit-cards-div">
+                    <div class="benefit-card">
+                        <div>
+                            01
+                        </div> 
+                        <div>
+                            High Quality
+                        </div>
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+                        <a href="#" class="btn-purple">
+                            more
+                        </a>
+                    </div>
+
+                </div>
+
+            </section>
+        </div>
         
     </main>
     
