--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Link CSS -->
     <link rel="stylesheet" href="./assets/css/general.css">
     <link rel="stylesheet" href="./assets/css/header.css">
-    <link rel="stylesheet" href="./assets/css/section-get-demo.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
     <!-- HEADER -->
@@ -46,7 +46,7 @@
                             <a href="">About Us</a>
                         </li>
                         <li>
-                            <a href="">Get started</a>
+                            <a href="" class="btn-white">Get Started</a>
                         </li>
                     </ul>
                 </nav>
