benefits section all devices

--- a/index.html
+++ b/index.html
@@ -202,11 +202,12 @@
                     Benefits of working with us
                 </h2>
                 <div class="benefit-cards-div">
+                    <!-- benefit 1 -->
                     <div class="benefit-card">
-                        <div>
+                        <div class="benefit-number">
                             01
                         </div> 
-                        <div>
+                        <div class="benefit-name">
                             High Quality
                         </div>
                         <p>
@@ -216,7 +217,81 @@
                             more
                         </a>
                     </div>
-
+                    <!-- benefit 2 -->
+                    <div class="benefit-card">
+                        <div class="benefit-number">
+                            02
+                        </div> 
+                        <div class="benefit-name">
+                            Creative Team
+                        </div>
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+                        <a href="#" class="btn-purple">
+                            more
+                        </a>
+                    </div>
+                    <!-- 3 -->
+                    <div class="benefit-card">
+                        <div class="benefit-number">
+                            03
+                        </div> 
+                        <div class="benefit-name">
+                            Amazing Result
+                        </div>
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+                        <a href="#" class="btn-purple">
+                            more
+                        </a>
+                    </div>
+                    <!-- 4 -->
+                    <div class="benefit-card">
+                        <div class="benefit-number">
+                            04
+                        </div> 
+                        <div class="benefit-name">
+                            Best Pricing
+                        </div>
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+                        <a href="#" class="btn-purple">
+                            more
+                        </a>
+                    </div>
+                    <!-- 5 -->
+                    <div class="benefit-card">
+                        <div class="benefit-number">
+                            05
+                        </div> 
+                        <div class="benefit-name">
+                            Innovations
+                        </div>
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+                        <a href="#" class="btn-purple">
+                            more
+                        </a>
+                    </div>
+                    <!-- 6 -->
+                    <div class="benefit-card">
+                        <div class="benefit-number">
+                            06
+                        </div> 
+                        <div class="benefit-name">
+                            24/7 Support
+                        </div>
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+                        <a href="#" class="btn-purple">
+                            more
+                        </a>
+                    </div>
                 </div>
 
             </section>
