--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- header parte destra -->
             <div class="header-dx">
                 <i class="fa-solid fa-bars"></i>
-                <!-- Nav si trasforma in display block oltre un tot px -->
+                <!-- Nav si trasforma in display block oltre i 1000px -->
                 <nav>
                     <ul>
                         <li>
@@ -296,6 +296,8 @@
 
             </section>
         </div>
+        <!-- SECTION ABOUT-US -->
+
         
     </main>
     
