--- a/index.html
+++ b/index.html
@@ -297,7 +297,57 @@
             </section>
         </div>
         <!-- SECTION ABOUT-US -->
+        <section id="about-us" class="container flex">
+            <div class="about-text">
+                <h2>
+                    About us
+                </h2>
+                <p>
+                    Sample text. Click to Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Pharetra magna ac placerat vestibulum. Quam lacus suspendisse faucibus interdum posuere lorem. Egestas tellus rutrum tellus pellentesque eu tincidunt. Neque vitae tempus quam pellentesque nec. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Interdum velit euismod in pellentesque massa placerat duis.
+                </p>
+                <p>
+                    Quis viverra nibh cras pulvinar mattis. Ornare arcu dui vivamus arcu felis bibendum ut tristique. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Dignissim diam quis enim lobortis scelerisque. Tellus molestie nunc non blandit massa enim. the text box. Click again or double click to start editing the text.
+                </p>
+            </div>
 
+            <div class="about-quote">
+                <div class="about-img">
+                    <i class="fa-solid fa-quote-left"></i>
+                    <img src="./assets/img/about.jpg" alt="About photo">
+                </div>
+                <p>
+                    I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.
+                </p>
+                <a href="#" class="btn-purple">
+                    <i class="fa-brands fa-linkedin"></i>
+                    Find me on linkedin
+                </a>
+            </div>
+        </section>
+        <!-- SECTION GET-STARTED -->
+        <div class="bg-purple">
+            <section id="started" class="container">
+                <span>
+                    GET STARTED
+                </span>
+                <p>
+                    Simple, Transparent, Pricing
+                </p>
+                <h2>
+                    It's Free!
+                </h2>
+                <p>
+                    We're still in beta and we will be for awhile. As we add more functionality, we'll look into other plans with more controls.
+                </p>
+                <a href="#" class="btn-getstarted">
+                    Get Started
+                </a>
+                <div class="copyright">
+                    Copyright 2021 Boolean • Classe XX • <a href="">Privacy policy</a>
+                </div>
+
+            </section>
+        </div>
         
     </main>
     
