footer all devices

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         </section>
         <!-- SECTION GET-STARTED -->
         <div class="bg-purple">
-            <section id="started" class="container">
+            <section id="started">
                 <span>
                     GET STARTED
                 </span>
@@ -345,10 +345,19 @@
                 <div class="copyright">
                     Copyright 2021 Boolean • Classe XX • <a href="">Privacy policy</a>
                 </div>
-
             </section>
         </div>
-        
+        <!-- FOOTER -->
+        <div class="bg-grey">
+            <footer>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi maiores minima vitae vero nulla pariatur impedit!
+                </p>
+                <p>
+                    <a href="">Lorem ipsum</a> scelerisque mauris pellentesque <a href="">Boolean careers</a>
+                </p>
+            </footer>
+        </div>
     </main>
     
 </body>
